gitops/apps/workloads/ccore-ai/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccore-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ccore-frontend
  template:
    metadata:
      labels:
        app: ccore-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/laurisneimanis/ccore-ai-demo-frontend:latest
          ports:
            - containerPort: 8501
